--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,12 +4,12 @@
 </div>
 
 <div class="box">
-  <% for (const item of items) { %>
+  <% items.forEach((item) => { %>
   <div class="item">
     <input type="checkbox" />
-    <p><%= item %></p>
+    <p><%= item.name %></p>
   </div>
-  <% } %>
+  <% }) %>
   <form class="item" action="/" method="post">
     <input
       type="text"
